apps/frigate/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - frigate.edtechworld.pl
    secretName: frigate-edtechworld-pl-tls
  rules:
    - host: frigate.edtechworld.pl
      http:
        paths:
          - path: / 
            pathType: Prefix  
            backend:
              service: { name: frigate-svc, port: { name: web }}
